--- a/Bloomed/src/components/Home.css
+++ b/Bloomed/src/components/Home.css
@@ -1,29 +1,55 @@
+/* Home.css */
+
+body {
+    font-family: sans-serif;
+    color: #222;
+    background: #fbfbfb;
+}
+
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
 .container {
-    margin-bottom: 20px;
+    max-width: 940px;
+    margin: 100px auto;
+    padding: 20px;
+
 }
 
 .title {
-    font-size: 2rem; 
-    font-weight: bold;
-    margin-top: 1.5rem; 
-    margin-bottom: 1.5rem; 
-}
-
-.image {
-    width: 100%;
-    height: 64px; 
-    max-height: 96px; 
-    object-fit: cover;
+    font-size: 2.5em;
+    line-height: 0.75;
+    margin: 0;
+    text-align: center; /* Centra el texto horizontalmente */
+    position: absolute;
+    top: 20px; /* Ajusta la distancia desde arriba según necesites */
+    left: 50%;
+    transform: translateX(-50%); /* Centra horizontalmente */
+    background-color: rgba(255, 255, 255, 0.8); /* Fondo semi-transparente */
+    padding: 10px 20px;
+    border-radius: 8px;
 }
 
 .paragraph {
-    margin-top: 2rem; 
-    margin-bottom: 1rem; 
-    line-height: 1.75; 
+    font-size: 1em;
+    line-height: 1.5em;
+    margin-bottom: 20px;
 }
 
 .list {
-    margin-left: 1.5rem; 
-    margin-bottom: 1rem; 
+    margin-left: 20px;
+}
+
+.list li {
+    margin-bottom: 10px;
+}
+
+.list li::before {
+    content: '•'; /* Punto negro como viñeta */
+    margin-right: 5px;
+    color: #333;
 }
