--- a/Bloomed/src/components/Home.css
+++ b/Bloomed/src/components/Home.css
@@ -1,55 +1,27 @@
-/* Home.css */
-
-body {
-    font-family: sans-serif;
-    color: #222;
-    background: #fbfbfb;
-}
-
-ul,
-li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.container {
-    max-width: 940px;
-    margin: 100px auto;
-    padding: 20px;
-
+.background-image {
+    height: 300px;
+    background-image: url('../assets/image/Home.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    margin-bottom: 20px;
 }
 
 .title {
     font-size: 2.5em;
     line-height: 0.75;
     margin: 0;
-    text-align: center; /* Centra el texto horizontalmente */
-    position: absolute;
-    top: 20px; /* Ajusta la distancia desde arriba según necesites */
-    left: 50%;
-    transform: translateX(-50%); /* Centra horizontalmente */
-    background-color: rgba(255, 255, 255, 0.8); /* Fondo semi-transparente */
+    text-align: center;
     padding: 10px 20px;
     border-radius: 8px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .paragraph {
     font-size: 1em;
     line-height: 1.5em;
     margin-bottom: 20px;
-}
-
-.list {
-    margin-left: 20px;
-}
-
-.list li {
-    margin-bottom: 10px;
-}
-
-.list li::before {
-    content: '•'; /* Punto negro como viñeta */
-    margin-right: 5px;
-    color: #333;
 }
