--- a/Bloomed/src/components/Home.css
+++ b/Bloomed/src/components/Home.css
@@ -1,27 +1,135 @@
-.background-image {
-    height: 300px;
-    background-image: url('../assets/image/Home.jpg');
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    margin-bottom: 20px;
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,900');
+
+body{
+  margin: 0;
+  padding: 0;
+  background-color: #FEFFFF;
+  font-family: 'Raleway', sans-serif;
 }
 
-.title {
-    font-size: 2.5em;
-    line-height: 0.75;
-    margin: 0;
-    text-align: center;
-    padding: 10px 20px;
-    border-radius: 8px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+*::selection{
+  outline: none;
 }
 
-.paragraph {
-    font-size: 1em;
-    line-height: 1.5em;
-    margin-bottom: 20px;
+.nav{
+  text-align: right;
+  height: 70px;
+  line-height: 70px;
+  position: relative;
+  z-index: 999;
 }
+
+.menu{
+  margin: 0 30px 0 0;
+}
+
+.menu a{
+  clear: right;
+  text-decoration: none;
+  color: #000000;
+  margin: 0 10px;
+  line-height: 70px;
+  letter-spacing: .9px;
+  text-transform: uppercase;
+  transition: all 250ms ease;
+}
+
+.strike {
+  position: relative;
+}
+
+.strike:hover:after {
+  content: ' ';
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #000000;
+  animation-name: strike;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;
+}
+
+.menu h5{
+  margin: 0 30px;
+  text-transform: uppercase;
+  float: left;
+  font-weight: 300;
+  font-size: 25px;
+  letter-spacing: 2px;
+  position: relative;
+  z-index: 999;
+  color: #000000;
+}
+
+label{
+  margin: 0 20px 0 0;
+  font-size: 26px;
+  line-height: 70px;
+  display: none;
+  width: 26px;
+  float: right;
+  color: #354757;
+}
+
+#toggle{
+  display: none;
+}
+
+.fixed{
+  background-color: #FEFFFF;
+}
+
+.photo{
+  position: relative;
+  background: url('/src/assets/image/Home.jpg') center;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.photo-text{
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay{
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 200vh;
+  top: 0;
+  left: 0;
+  background: rgba(60, 63, 114, .6);
+}
+
+.photo h4{
+  font-size: 60px;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  color: #000000;
+  margin: 10px;
+  cursor: pointer;
+  position: relative;
+  z-index: 998;
+}
+
+.photo p{
+  width: 60%;
+  text-align: center;
+  letter-spacing: 1.5px;
+  color: #000000;
+  position: relative;
+  z-index: 998;
+}
+
+
+
+
+
+
+
