--- a/Bloomed/src/components/Home.css
+++ b/Bloomed/src/components/Home.css
@@ -1,135 +1,74 @@
+
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,900');
 
-body{
-  margin: 0;
-  padding: 0;
-  background-color: #FEFFFF;
-  font-family: 'Raleway', sans-serif;
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #FEFFFF;
+    font-family: sans-serif;
+    color: #000000;
+    line-height: 1.6;
 }
 
-*::selection{
-  outline: none;
+.menu {
+    margin: 0 30px 0 0;
 }
 
-.nav{
-  text-align: right;
-  height: 70px;
-  line-height: 70px;
-  position: relative;
-  z-index: 999;
+.menu a {
+    clear: right;
+    text-decoration: none;
+    color: #000000;
+    margin: 0 10px;
+    line-height: 70px;
+    letter-spacing: .9px;
+    text-transform: uppercase;
+    transition: all 250ms ease;
 }
 
-.menu{
-  margin: 0 30px 0 0;
+.photo {
+    position: relative;
+    background: url('/src/assets/image/Home.jpg') center;
+    background-size: cover;
+    overflow: hidden;
+    min-height: 500px; 
 }
 
-.menu a{
-  clear: right;
-  text-decoration: none;
-  color: #000000;
-  margin: 0 10px;
-  line-height: 70px;
-  letter-spacing: .9px;
-  text-transform: uppercase;
-  transition: all 250ms ease;
+.photo-text {
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.strike {
-  position: relative;
+.photo h4 {
+    font-size: 60px;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    color: #000000;
+    margin: 10px;
+    cursor: pointer;
+    position: relative;
+    z-index: 998;
 }
 
-.strike:hover:after {
-  content: ' ';
-  position: absolute;
-  top: 40%;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: #000000;
-  animation-name: strike;
-  animation-duration: 1s;
-  animation-timing-function: ease;
-  animation-iteration-count: infinite;
+.content {
+    margin: 0 auto;
+    padding: 4rem 0;
+    width: 960px;
+    max-width: 100%;
 }
 
-.menu h5{
-  margin: 0 30px;
-  text-transform: uppercase;
-  float: left;
-  font-weight: 300;
-  font-size: 25px;
-  letter-spacing: 2px;
-  position: relative;
-  z-index: 999;
-  color: #000000;
+p img {
+    max-width: 100%;
+    height: auto;
 }
 
-label{
-  margin: 0 20px 0 0;
-  font-size: 26px;
-  line-height: 70px;
-  display: none;
-  width: 26px;
-  float: right;
-  color: #354757;
-}
-
-#toggle{
-  display: none;
-}
-
-.fixed{
-  background-color: #FEFFFF;
-}
-
-.photo{
-  position: relative;
-  background: url('/src/assets/image/Home.jpg') center;
-  background-size: cover;
-  overflow: hidden;
-}
-
-.photo-text{
-  min-height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.overlay{
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 200vh;
-  top: 0;
-  left: 0;
-  background: rgba(60, 63, 114, .6);
-}
-
-.photo h4{
-  font-size: 60px;
-  text-transform: uppercase;
-  letter-spacing: 1.2px;
-  color: #000000;
-  margin: 10px;
-  cursor: pointer;
-  position: relative;
-  z-index: 998;
-}
-
-.photo p{
-  width: 60%;
+.footer {
   text-align: center;
-  letter-spacing: 1.5px;
+  padding: 20px 0;
+  background-color: #868686;
   color: #000000;
-  position: relative;
-  z-index: 998;
+  font-size: 14px;
 }
-
-
-
-
-
-
 
