--- a/Bloomed/src/components/Login.css
+++ b/Bloomed/src/components/Login.css
@@ -8,9 +8,9 @@
 .form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background: #393E46;
   max-width: 360px;
-  margin: 0 auto 100px;
+  margin: 0 auto 200px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -30,7 +30,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #00ADB5;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -41,7 +41,7 @@
   cursor: pointer;
 }
 .form button:hover, .form button:active, .form button:focus {
-  background: #43A047;
+  background: #00ADB5;
 }
 .form .message {
   margin: 15px 0 0;
@@ -49,13 +49,11 @@
   font-size: 12px;
 }
 .form .message a {
-  color: #4CAF50;
+  color: #00ADB5;
   text-decoration: none;
 }
 body {
-  background: #76b852; /* fallback para navegadores antiguos */
-  background: rgb(141,194,111);
-  background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
+  background: #222831; 
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
